--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Placeholder Name",
+  "name": "Placeholder Name",
   "icons":{
-    "16": "logo192.png",
-    "48": "logo192.png",
-    "128": "logo192.png"
+    "16": "pixel-heart.svg",
+    "48": "pixel-heart.svg",
+    "128": "pixel-heart.svg"
   },
   "start_url": ".",
   "display": "standalone",
@@ -12,7 +12,7 @@
   "background_color": "#ffffff",
   "browser_action": {
     "default_popup": "index.html",
-    "default_title": "Open the popup"
+    "default_title": "Placeholder Name"
   },
   "manifest_version": 2,
   "version": "1.0",
