--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "@types/node": "^16.11.68",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
+        "body-parser": "^1.20.1",
+        "cors": "^2.8.5",
         "mongoose": "^6.7.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
