--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,12 +11,24 @@
   "theme_color": "#000000",
   "background_color": "#ffffff",
   "browser_action": {
-    "default_popup": "index.html",
     "default_title": "Placeholder Name"
   },
   "manifest_version": 2,
   "version": "1.0",
   "chrome_url_overrides": {
     "newtab": "./index.html"
+  },
+  "background": {
+    "scripts" : ["background.js"]
+  },
+  "permissions": [
+    "identity",
+    "tabs"
+  ],
+  "oauth2" : {
+    "client_id": "8961397308-4o7a4fb7hi24bassg09o9225rr91bgdn.apps.googleusercontent.com",
+    "scopes": [
+        "openid", "email", "profile"
+    ]
   }
 }
