--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "cors": "^2.8.5",
         "mongoose": "^6.7.4",
         "react": "^18.2.0",
+        "react-calendar": "^4.0.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.4",
         "react-scripts": "5.0.1",
