--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@types/jest": "^27.5.2",
         "@types/node": "^16.11.68",
         "@types/react": "^18.0.21",
+        "@types/react-calendar": "^3.9.0",
         "@types/react-dom": "^18.0.6",
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
