--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@headlessui/react": "^1.7.7",
+        "@heroicons/react": "1.0.6",
+        "@styled-icons/heroicons-outline": "^10.47.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -13,6 +16,7 @@
         "@types/react-dom": "^18.0.6",
         "body-parser": "^1.20.1",
         "cors": "^2.8.5",
+        "date-fns": "^2.29.3",
         "mongoose": "^6.7.4",
         "react": "^18.2.0",
         "react-calendar": "^4.0.0",
